# cmake_example_C

./: CMakeLists.txt
MainApp/: CMakeLists.txt  main.c
test/silnia_test/: CMakeLists.txt  UTest.c
